[tool.poetry]
name = "counter_app"
version = "0.1.0"
description = "Simple counter app, built by PyQt6"
authors = ["Bagas Wastu <67826350+bagaswastu@users.noreply.github.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
PySide6 = "^6.2.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
